--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
     </header>
 
     <div class="hero">
-        <!-- Large Hero Image -->
-        <img src="https://images.app.goo.gl/1WBzAiXve33B2jsQ7" alt="Man talking to phone">
+        <!-- Updated Image -->
+        <img src="https://media.istockphoto.com/id/1987564559/photo/man-working-from-home-on-laptop-talking-on-smartphone.jpg?s=612x612&w=0&k=20&c=g-XR0HIaxJwfqrAGANqCgaDP4VBTuYeUQwRCBW0cQMU=" 
+        alt="Man working from home on laptop and talking on smartphone">
         <h2>Welcome to the Future of AI Assistance</h2>
     </div>
 
