--- a/index.html
+++ b/index.html
@@ -1,111 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spectra AI Assistant</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f9fa;
-            color: #333;
-            line-height: 1.6;
-        }
-
-        header {
-            background-color: #6200ea;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        header h1 {
-            font-size: 3rem;
-            margin: 0;
-        }
-
-        .hero {
-            text-align: center;
-            padding: 50px 20px;
-            background: linear-gradient(to bottom, #ffffff, #f0f0f0);
-        }
-
-        .hero img {
-            width: 100%;
-            max-width: 800px;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            margin-bottom: 20px;
-        }
-
-        .hero h2 {
-            font-size: 2.5rem;
-            color: #6200ea;
-            margin-top: 20px;
-        }
-
-        .assistant-section {
-            text-align: center;
-            padding: 30px 20px;
-            margin: 20px auto;
-            background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 800px;
-        }
-
-        .assistant-section p {
-            font-size: 1.2rem;
-            margin-bottom: 20px;
-            color: #555;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #6200ea;
-            color: #fff;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-
-        footer p {
-            margin: 0;
-            font-size: 1rem;
-        }
-
-        footer a {
-            color: #ffdd57;
-            text-decoration: none;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Spectra AI</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Spectra AI Assistant</h1>
-    </header>
-
-    <div class="hero">
-        <!-- Updated Image -->
-        <img src="https://media.istockphoto.com/id/1987564559/photo/man-working-from-home-on-laptop-talking-on-smartphone.jpg?s=612x612&w=0&k=20&c=g-XR0HIaxJwfqrAGANqCgaDP4VBTuYeUQwRCBW0cQMU=" 
-        alt="Man working from home on laptop and talking on smartphone">
-        <h2>Welcome to the Future of AI Assistance</h2>
+  <header class="hero">
+    <div class="container">
+      <h1>Welcome to Spectra AI</h1>
+      <p class="tagline">Revolutionizing Your Digital Experience</p>
+      <p class="description">
+        Dive into the future with Spectra AI. Discover how our cutting-edge technology can
+        transform your workflows, enhance productivity, and inspire innovation.
+      </p>
+      <div class="buttons">
+        <a href="#discover" class="btn">Discover Spectra AI</a>
+        <a href="#about" class="btn secondary">Learn More About Us</a>
+      </div>
     </div>
+  </header>
 
-    <div class="assistant-section">
-        <p>Interact with Spectra AI Assistant below and experience cutting-edge AI technology.</p>
-        <!-- Eleven Labs AI Assistant Embed Code -->
-        <elevenlabs-convai agent-id="QTChbpeUykJTtaKL1F8X"></elevenlabs-convai>
-        <script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
-    </div>
+  <main>
+    <section id="discover" class="section">
+      <h2>Discover Spectra AI</h2>
+      <p>Experience the latest in AI technology that simplifies and transforms lives.</p>
+    </section>
 
-    <footer>
-        <p>&copy; 2025 Spectra AI. All Rights Reserved. | <a href="https://github.com/">GitHub Pages</a></p>
-    </footer>
+    <section id="about" class="section">
+      <h2>About Us</h2>
+      <p>We are committed to driving innovation through next-gen AI solutions.</p>
+    </section>
+  </main>
+
+  <!-- ElevenLabs Snippet -->
+  <elevenlabs-convai agent-id="QTChbpeUykJTtaKL1F8X"></elevenlabs-convai>
+  <script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
+
+  <footer>
+    <p>&copy; 2025 Spectra AI. All Rights Reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
